--- a/project.config.json
+++ b/project.config.json
@@ -15,7 +15,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
 	"appid": "wx25183056d3ad5d31",
-	"projectname": "LawService",
+	"projectname": "PanoramicCamera",
 	"isGameTourist": false,
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
